--- a/package.json
+++ b/package.json
@@ -7,11 +7,23 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "review": "prettier --write ."
   },
   "dependencies": {
-    "astro": "^4.13.3",
     "@astrojs/check": "^0.9.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.13.3",
+    "lenis": "^1.1.9",
+    "sharp": "^0.33.4",
+    "sharp-ico": "^0.1.5",
+    "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/node": "^22.2.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.6"
   }
 }
